Tiled textures (UDIM) getting lost when saving the .blend but not the textures #73713

Closed
opened 2020-02-10 15:32:03 +01:00 by Dalai Felinto · 5 comments

Blender Version
Broken: version: 2.83 (sub 2), branch: master, commit date: 2020-02-09 23:33, hash: cdfaddbb1d
Worked: -

Short description of error
We need the following dialog when leaving files that have unsaved tiled images:
image.png

Exact steps for others to reproduce the error

  • Start painting a tiled texture
  • Save .blend
  • Ctrl+N to open a new file

It should show the dialog to save the textures that were painted (same as we do for single textures).

Sample file
udim.blend
Either create a udim_1001.png in the same folder before starting to paint, or Fill Tile.

**Blender Version** Broken: version: 2.83 (sub 2), branch: master, commit date: 2020-02-09 23:33, hash: `cdfaddbb1d` Worked: - **Short description of error** We need the following dialog when leaving files that have unsaved tiled images: ![image.png](https://archive.blender.org/developer/F8332583/image.png) **Exact steps for others to reproduce the error** * Start painting a tiled texture * Save .blend * Ctrl+N to open a new file It should show the dialog to save the textures that were painted (same as we do for single textures). Sample file [udim.blend](https://archive.blender.org/developer/F8332588/udim.blend) Either create a udim_1001.png in the same folder before starting to paint, or `Fill Tile`.
Author
Owner

Added subscriber: @dfelinto

Added subscriber: @dfelinto
Dalai Felinto changed title from Tiled textures not to Tiled textures (UDIM) getting lost when saving the .blend but not the textures 2020-02-10 15:35:05 +01:00
Author
Owner

Added subscriber: @LukasStockner

Added subscriber: @LukasStockner
Author
Owner

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

This issue was referenced by 36b7f5d27e

This issue was referenced by 36b7f5d27e7aec2300d0c9f44f724c479769eb98
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Lukas Stockner self-assigned this 2020-02-10 16:16:22 +01:00
Thomas Dinges added this to the 2.82 milestone 2023-02-08 16:41:32 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#73713
No description provided.