Fix T73713: Tiled textures (UDIM) getting lost when saving the .blend but not the textures

The issue here is simple, IMA_SRC_TILED was missing from a check for whether the image should
be saved.

Note that tiled images won't be automatically saved if they have never been saved before.
For single images this is handled by packing them, but packing of tiled images isn't
supported yet.

However, in that case the file closing dialog will at least show a warning now instead of
completely ignoring tiled images.